Fix scrollbars in FDG

--- a/splunk_wftoolkit/django/splunk_wftoolkit/static/splunk_wftoolkit/components/forcedirected/forcedirected.css
+++ b/splunk_wftoolkit/django/splunk_wftoolkit/static/splunk_wftoolkit/components/forcedirected/forcedirected.css
@@ -1,10 +1,8 @@
 .splunk-toolkit-force-directed {
-    overflow-y: auto;
+    overflow: hidden;
     font-family: arial;
-    position: relative;
-    height: 95%;
-    width: 95%;
 }
+
 .splunk-toolkit-force-directed circle.node {
     stroke: #fff;
     stroke-width: 1.5px;
